@@ -3,6 +3,8 @@ Changelog
 
 4.7-dev - (unreleased)
 ----------------------
+* Bugfix: remove login tab from getHeader call
+  [szabozo0 refs #14002]
 * Bugfix: remove title tag, generator and viewport meta tags from getRequiredHead call
   [szabozo0 refs #14002]
 
